# filelist-query

./: .gitignore  Justfile  LICENSE.txt  README.md  dot-env-template.txt  pyproject.toml
src/filelist_query/: __about__.py  __main__.py  app_data.py  cli.py  cond_opts.py  data.py  sc_history.py  style.tcss  tab_columns.py  tab_criteria.py  tab_fields.py  tab_query.py  tab_results.py  ui.py
tests/: __init__.py  test_app.py  test_tab_criteria.py  test_tab_fields.py  test_tab_query.py  test_tab_results.py
