[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "filelist-query"
dynamic = ["version"]
description = 'Textual user interface for querying databases created by filelist-tools.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["filelist", "filelist-tools", "filelist-query", "tui", "sqlite", "cli", "textual"]
authors = [
  { name = "Bill Melvin", email = "bill@billmelvin.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "python-dotenv",
  "rich",
  "textual",
]

# [project.urls]
# Documentation = "https://github.com/unknown/filelist-query#readme"
# Issues = "https://github.com/unknown/filelist-query/issues"
# Source = "https://github.com/unknown/filelist-query"

[tool.hatch.version]
path = "src/filelist_query/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "textual-dev",
  "pytest-asyncio",
  "pytest-textual-snapshot",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/filelist_query tests}"

[tool.coverage.run]
source_pkgs = ["filelist_query", "tests"]
branch = true
parallel = true
omit = [
  "src/filelist_query/__about__.py",
]

[tool.coverage.paths]
filelist_query = ["src/filelist_query", "*/filelist-query/src/filelist_query"]
tests = ["tests", "*/filelist-query/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
