[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "filelist-query"
dynamic = ["version"]
description = 'Textual user interface for querying databases created by filelist-tools.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["filelist", "filelist-tools", "filelist-query", "tui", "sqlite", "cli", "textual"]
authors = [
  { name = "Bill Melvin", email = "bill@billmelvin.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "python-dotenv",
  "rich",
  "textual",
]

# [project.urls]
# Documentation = "https://github.com/unknown/filelist-query#readme"
# Issues = "https://github.com/unknown/filelist-query/issues"
# Source = "https://github.com/unknown/filelist-query"

[tool.hatch.version]
path = "src/filelist_query/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "textual-dev",
  "pytest-asyncio",
  "pytest-textual-snapshot",
  "ruff",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/filelist_query tests}"

[tool.coverage.run]
source_pkgs = ["filelist_query", "tests"]
branch = true
parallel = true
omit = [
  "src/filelist_query/__about__.py",
]

[tool.coverage.paths]
filelist_query = ["src/filelist_query", "*/filelist-query/src/filelist_query"]
tests = ["tests", "*/filelist-query/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # Pyfakes
    "FA",   # flake8-future-annotations
    "I",    # isort
    "ISC",  # flake8-implicit-str-concat
    "PERF", # Perflint
    "PL",   # Pylint
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi
    "RET",  # flake8-return
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "W"     # Warning
]
# extend-select = ["ALL"]
ignore = [
    "ISC001",  # single-line-implicit-string-concatenation
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = [
    "S101",    # assert
    "PLR2004", # magic value
]
